poc test director
