# src/tools/extended-test-framework/test_director/swagger_test_director_oas2.yaml
@@ -4,7 +4,7 @@ swagger: '2.0'
 info:
   description: MayaData System Test Framework API
   version: 1.0.1
-  title: Test Framework
+  title: Test Framework API
 schemes:
   - http
 produces:
@@ -271,18 +271,12 @@ definitions:
   TestPlanSpec:
     type: object
     required:
-      - status
+      - name
     properties:
       name:
         type: string
         description: display name
         example: Nightly Stable Test Plan
-      status:
-        $ref: '#/definitions/TestPlanStatusEnum'
-      assignee:
-        type: string
-        description: assigned user to the test plan/owner
-        example: John Doe
   TestPlan:
     allOf:
       - $ref: '#/definitions/TestPlanSpec'
@@ -293,9 +287,12 @@ definitions:
           isActive:
             type: boolean
             readOnly: true
+          status:
+            $ref: '#/definitions/TestPlanStatusEnum'
     additionalProperties: false
   TestPlanStatusEnum:
     type: string
+    readOnly: true
     enum:
       - NOT_STARTED
       - RUNNING
@@ -322,6 +319,8 @@ definitions:
             type: string
             format: uuid
             description: Test Run unqiue identifer (pod metadata.uid)
+          testPlanKey:
+            $ref: '#/definitions/JiraKey'
           startDateTime:
             type: string
             format: date-time
